--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -25,9 +25,9 @@
   </style>
 </head>
 
-<body class="h-full font-sans bg-gray-100 flex flex-col">
+<body class="h-full font-sans flex flex-col bg-gray-100">
   <!-- Mobile Header -->
-  <header class="md:hidden sticky top-0 z-40 bg-white shadow-sm p-4 flex items-center justify-between">
+  <header class="md:hidden sticky top-0 z-40 bg-white shadow p-4 flex items-center justify-between">
     <div class="flex items-center gap-3">
       <button id="menuToggle" class="text-gray-700 focus:outline-none">
         <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -39,16 +39,16 @@
     </div>
   </header>
 
-  <div class="flex flex-1">
+  <div class="flex flex-1 overflow-hidden">
     <div id="sidebar-container"></div>
     <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
-    <!-- Main Section -->
-    <main class="flex-1 p-6 md:p-10 overflow-y-auto">
+    <!-- Main Content -->
+    <main class="flex-1 overflow-y-auto p-6 md:p-10">
       <div class="max-w-5xl mx-auto space-y-6">
         <h1 class="text-3xl font-bold text-indigo-700">Support Tickets</h1>
 
-        <!-- Search & Filters -->
+        <!-- Search and Filters -->
         <div class="space-y-4">
           <input
             id="ticketSearch"
@@ -70,7 +70,7 @@
           </div>
         </div>
 
-        <!-- Ticket List -->
+        <!-- Tickets List -->
         <div id="ticketList" class="space-y-6 mt-6"></div>
 
         <!-- Empty State -->
@@ -91,13 +91,13 @@
   <!-- Modal -->
   <div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden flex items-center justify-center px-4">
     <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md max-h-[90vh] animate-fade-in relative flex flex-col overflow-hidden">
-      <!-- Header -->
+      <!-- Modal Header -->
       <div class="flex justify-between items-center px-6 pt-6 pb-3 border-b">
         <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
         <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
       </div>
 
-      <!-- Scrollable Content -->
+      <!-- Modal Body (Scrollable) -->
       <div class="flex-1 overflow-y-auto px-6 py-4 space-y-4">
         <div id="modalThread" class="text-sm text-gray-700 space-y-3 border-t pt-3"></div>
 
@@ -109,7 +109,7 @@
         ></textarea>
       </div>
 
-      <!-- Footer -->
+      <!-- Modal Footer -->
       <div class="px-6 py-4 border-t text-right">
         <button
           id="modalSubmit"
@@ -121,7 +121,7 @@
     </div>
   </div>
 
-  <!-- Ticket Template -->
+  <!-- Ticket Thread Template -->
   <template id="ticketThreadTemplate">
     <div class="bg-white border border-gray-200 rounded-2xl shadow-md p-6 space-y-6 max-h-[75vh] overflow-y-auto">
       <div class="space-y-2">
@@ -134,7 +134,7 @@
         </div>
       </div>
 
-      <!-- Buttons -->
+      <!-- Actions -->
       <div class="flex flex-wrap gap-4 pt-6 border-t border-gray-100">
         <button class="reply-btn bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-6 py-2.5 rounded-full shadow-sm transition">
           💬 Reply
