--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,24 +1,15 @@
-<aside
-  id="sidebar"
-  class="fixed md:relative inset-y-0 left-0 z-40 w-72 min-h-screen bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col"
->
+<aside id="sidebar" class="fixed md:relative inset-y-0 left-0 z-40 w-72 min-h-screen bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col">
   <!-- Top: Logo & Business Info -->
   <div class="p-6 flex items-center gap-3 bg-white border-b shadow sticky top-0 z-10">
-    <img
-      id="logo"
-      src="/assets/logo-placeholder.png"
-      alt="Logo"
-      class="w-10 h-10 rounded-full shadow-md"
-    />
+    <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow-md" />
     <div class="overflow-hidden">
       <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
       <p id="sidebarUserName" class="text-sm text-gray-500 truncate"></p>
     </div>
   </div>
 
-  <!-- Middle: Scrollable Navigation Links -->
+  <!-- Middle: Navigation -->
   <nav class="flex-1 overflow-y-auto px-4 py-4 space-y-1 font-medium text-gray-700">
-
     <a href="/admin/dashboard.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏠 Dashboard</a>
     <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
     <a href="/admin/bookings.html" class="block px-4 py-2 rounded hover:bg-blue-50">📆 Bookings</a>
@@ -30,22 +21,17 @@
     <a href="/admin/availability.html" class="block px-4 py-2 rounded hover:bg-blue-50">⏱ Availability</a>
     <a href="/admin/notifications.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Notifications</a>
 
-    <!-- 🌟 Reviews Management Dropdown -->
+    <!-- 🌟 Reviews Dropdown -->
     <div class="space-y-1">
-      <button
-        type="button"
-        class="w-full flex justify-between items-center px-4 py-2 rounded hover:bg-blue-50 dropdown-toggle"
-      >
+      <button type="button" class="w-full flex justify-between items-center px-4 py-2 rounded hover:bg-blue-50 dropdown-toggle">
         <span>🌟 Reviews Management</span>
-        <svg class="w-4 h-4 transform transition-transform" fill="none" stroke="currentColor" stroke-width="2"
-          viewBox="0 0 24 24">
+        <svg class="w-4 h-4 transition-transform transform" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
         </svg>
       </button>
-
-      <div class="pl-6 space-y-1 dropdown-menu hidden">
-        <a href="/admin/reviews.html" class="block px-2 py-1 rounded hover:bg-blue-50">Review Settings</a>
-        <a href="/admin/internal-reviews.html" class="block px-2 py-1 rounded hover:bg-blue-50">Review Analytics</a>
+      <div class="ml-6 mt-1 space-y-1 dropdown-menu hidden">
+        <a href="/admin/reviews.html" class="block px-3 py-1.5 rounded hover:bg-blue-100 text-sm">🛠 Review Settings</a>
+        <a href="/admin/internal-reviews.html" class="block px-3 py-1.5 rounded hover:bg-blue-100 text-sm">📈 Review Analytics</a>
       </div>
     </div>
 
@@ -59,13 +45,8 @@
     <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
   </nav>
 
-  <!-- Bottom: Logout Button -->
+  <!-- Bottom: Logout -->
   <div class="p-4 border-t bg-white sticky bottom-0 z-10 shadow-inner">
-    <button
-      id="logoutBtn"
-      class="w-full px-4 py-2 text-white bg-blue-600 rounded-md hover:bg-blue-700 transition"
-    >
-      🚪 Logout
-    </button>
+    <button id="logoutBtn" class="w-full px-4 py-2 text-white bg-blue-600 rounded-md hover:bg-blue-700 transition">🚪 Logout</button>
   </div>
 </aside>
