--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -27,17 +27,26 @@
     <a href="/admin/availability.html" class="block px-4 py-2 rounded hover:bg-blue-50">⏱ Availability</a>
     <a href="/admin/notifications.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Notifications</a>
 
-    <div x-data="{ open: false }" class="space-y-1">
-  <button @click="open = !open" class="w-full flex justify-between items-center px-4 py-2 rounded hover:bg-blue-50">
+    <div class="space-y-1">
+  <button
+    type="button"
+    class="dropdown-toggle w-full flex justify-between items-center px-4 py-2 rounded hover:bg-blue-50"
+  >
     <span>🌟 Reviews Management</span>
-    <svg :class="{ 'rotate-180': open }" class="w-4 h-4 transition-transform transform duration-200 ease-in-out"
-      fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+    <svg
+      class="w-4 h-4 transition-transform transform duration-200 ease-in-out"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2"
+      viewBox="0 0 24 24"
+    >
       <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
     </svg>
   </button>
-  <div x-show="open" class="ml-6 mt-1 space-y-1">
-    <a href="/admin/reviews.html" class="block px-3 py-1.5 rounded hover:bg-blue-100 text-sm">🛠 Review Settings</a>
-    <a href="/admin/internal-reviews.html" class="block px-3 py-1.5 rounded hover:bg-blue-100 text-sm">📈 Review Analytics</a>
+
+  <div class="dropdown-menu hidden ml-6 mt-1 space-y-1">
+    <a href="/admin/reviews.html" class="submenu-link">🛠 Review Settings</a>
+    <a href="/admin/internal-reviews.html" class="submenu-link">📈 Review Analytics</a>
   </div>
 </div>
 
