--- a/public/admin/reviews.html
+++ b/public/admin/reviews.html
@@ -156,11 +156,13 @@
 
     <div class="text-center pt-4">
       <button
-        id="saveTwilioSettings"
-        class="bg-indigo-600 text-white px-6 py-2 rounded-md font-medium hover:bg-indigo-700 transition"
-      >
-        Save & Connect
-      </button>
+  id="saveTwilioSettings"
+  style="background-color: #4f46e5; color: white;"
+  class="px-6 py-2 rounded-md font-medium hover:bg-indigo-700 transition"
+>
+  Save & Connect
+</button>
+
     </div>
   </div>
 </div>
