--- a/public/admin/reviews.html
+++ b/public/admin/reviews.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Review Settings – TidyZenic Admin</title>
   <link rel="stylesheet" href="/styles.css" />
+
+  <!-- Chart.js for analytics -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- App scripts -->
   <script defer src="/admin/js/load-sidebar.js"></script>
   <script defer src="/admin/js/reviews.js"></script>
 </head>
@@ -28,25 +33,21 @@
     <main class="flex-1 p-6 md:p-10 overflow-y-auto">
       <div class="max-w-3xl mx-auto space-y-8">
 
-        <!-- Page Title -->
         <h1 class="text-3xl font-bold text-indigo-700">Review Settings</h1>
 
-        <!-- AI Smart Tip -->
         <div class="p-4 bg-indigo-50 border-l-4 border-indigo-500 text-sm text-indigo-800 rounded-xl">
           💡 <strong>AI Suggestion:</strong> Set the review delay to <strong>1–3 hours</strong> after service to boost engagement.
         </div>
 
         <!-- Google Reviews Section -->
         <section class="bg-white shadow rounded-2xl p-6 space-y-4">
-          <h2 class="text-xl font-semibold text-gray-800">Google Reviews</h2>
+          <div class="flex justify-between items-center">
+            <h2 class="text-xl font-semibold text-gray-800">Google Reviews</h2>
+            <button id="openGoogleReviewModal" class="text-sm text-indigo-600 font-medium hover:underline">View Details →</button>
+          </div>
 
           <label for="googleReviewLink" class="block text-sm text-gray-600 mb-1">Google My Business Review Link</label>
-          <input
-            type="url"
-            id="googleReviewLink"
-            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 transition"
-            placeholder="https://g.page/your-business"
-          />
+          <input type="url" id="googleReviewLink" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 transition" placeholder="https://g.page/your-business" />
 
           <label class="inline-flex items-center space-x-3 mt-2">
             <input type="checkbox" id="enableGoogleReview" class="form-checkbox h-5 w-5 text-indigo-600" />
@@ -54,28 +55,25 @@
           </label>
         </section>
 
-        <!-- Internal Reviews -->
+        <!-- Internal Reviews Section -->
         <section class="bg-white shadow rounded-2xl p-6 space-y-4">
-          <h2 class="text-xl font-semibold text-gray-800">Internal Reviews</h2>
+          <div class="flex justify-between items-center">
+            <h2 class="text-xl font-semibold text-gray-800">Internal Reviews</h2>
+            <button id="openInternalReviewModal" class="text-sm text-indigo-600 font-medium hover:underline">View Details →</button>
+          </div>
+
           <label class="inline-flex items-center space-x-3">
             <input type="checkbox" id="enableInternalReview" class="form-checkbox h-5 w-5 text-indigo-600" />
             <span class="text-sm text-gray-700">Enable Internal Review System</span>
           </label>
         </section>
 
-        <!-- Review Delay -->
+        <!-- Delay Section -->
         <section class="bg-white shadow rounded-2xl p-6 space-y-4">
           <h2 class="text-xl font-semibold text-gray-800">Schedule Review Request</h2>
           <label for="reviewDelayHours" class="block text-sm text-gray-600">Send Request After</label>
           <div class="flex items-center gap-2">
-            <input
-              type="number"
-              id="reviewDelayHours"
-              min="1"
-              max="72"
-              class="w-24 px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500"
-              placeholder="2"
-            />
+            <input type="number" id="reviewDelayHours" min="1" max="72" class="w-24 px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500" placeholder="2" />
             <span class="text-sm text-gray-500">hours after service completion</span>
           </div>
         </section>
@@ -95,10 +93,7 @@
 
         <!-- Save Button -->
         <div class="text-right">
-          <button
-            id="saveReviewSettings"
-            class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-3 rounded-lg shadow-sm transition"
-          >
+          <button id="saveReviewSettings" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-3 rounded-lg shadow-sm transition">
             Save Settings
           </button>
         </div>
@@ -106,68 +101,68 @@
       </div>
     </main>
   </div>
-<!-- SMS Setup Modal -->
-<div id="smsModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
-  <div class="bg-white rounded-xl shadow-2xl p-6 w-[90%] sm:w-full max-w-sm relative space-y-6">
-    
-    <!-- Close Button -->
-    <button id="closeSmsModal" class="absolute top-3 right-4 text-gray-400 hover:text-red-500 text-2xl font-bold">&times;</button>
-    
-    <h2 class="text-lg font-semibold text-gray-800 text-center">Connect Twilio for SMS</h2>
 
-    <p class="text-sm text-gray-500 text-center">
-      Enter your Twilio credentials to enable SMS review requests.
-    </p>
+  <!-- Google Review Modal -->
+  <div id="googleReviewModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
+    <div class="bg-white rounded-xl shadow-2xl p-6 w-[90%] max-w-2xl relative space-y-6">
+      <button id="closeGoogleReviewModal" class="absolute top-3 right-4 text-gray-400 hover:text-red-500 text-2xl font-bold">&times;</button>
+      <h2 class="text-xl font-semibold text-gray-800">Google Reviews Analytics</h2>
 
-    <div class="space-y-4">
-      <div>
-        <label class="block text-sm font-medium text-gray-600 mb-1" for="twilioSid">Twilio SID</label>
-        <input
-          type="text"
-          id="twilioSid"
-          class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500"
-          placeholder="ACXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
-        />
-        <p class="text-xs text-gray-400 mt-1">Found in your Twilio dashboard.</p>
+      <canvas id="googleChart" class="w-full h-64"></canvas>
+
+      <div class="text-right pt-4">
+        <button id="sendGoogleReview" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md">
+          📬 Send Google Review Request
+        </button>
       </div>
-
-      <div>
-        <label class="block text-sm font-medium text-gray-600 mb-1" for="twilioAuthToken">Auth Token</label>
-        <input
-          type="text"
-          id="twilioAuthToken"
-          class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500"
-          placeholder="Your Auth Token"
-        />
-        <p class="text-xs text-gray-400 mt-1">Keep this token secure.</p>
-      </div>
-
-      <div>
-        <label class="block text-sm font-medium text-gray-600 mb-1" for="twilioPhone">Twilio Phone Number</label>
-        <input
-          type="text"
-          id="twilioPhone"
-          class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500"
-          placeholder="+1234567890"
-        />
-        <p class="text-xs text-gray-400 mt-1">Include country code, e.g. <code>+1</code> for USA.</p>
-      </div>
-    </div>
-
-    <div class="text-center pt-4">
-      <button
-  id="saveTwilioSettings"
-  style="background-color: #4f46e5; color: white;"
-  class="px-6 py-2 rounded-md font-medium hover:bg-indigo-700 transition"
->
-  Save & Connect
-</button>
-
     </div>
   </div>
-</div>
 
+  <!-- Internal Review Modal -->
+  <div id="internalReviewModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
+    <div class="bg-white rounded-xl shadow-2xl p-6 w-[90%] max-w-2xl relative space-y-6">
+      <button id="closeInternalReviewModal" class="absolute top-3 right-4 text-gray-400 hover:text-red-500 text-2xl font-bold">&times;</button>
+      <h2 class="text-xl font-semibold text-gray-800">Internal Reviews Analytics</h2>
 
+      <canvas id="internalChart" class="w-full h-64"></canvas>
+
+      <div class="text-right pt-4">
+        <button id="sendInternalReview" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md">
+          📨 Send Internal Review Form
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- SMS Setup Modal -->
+  <div id="smsModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
+    <div class="bg-white rounded-xl shadow-2xl p-6 w-[90%] sm:w-full max-w-sm relative space-y-6">
+      <button id="closeSmsModal" class="absolute top-3 right-4 text-gray-400 hover:text-red-500 text-2xl font-bold">&times;</button>
+      <h2 class="text-lg font-semibold text-gray-800 text-center">Connect Twilio for SMS</h2>
+      <p class="text-sm text-gray-500 text-center">Enter your Twilio credentials to enable SMS review requests.</p>
+
+      <div class="space-y-4">
+        <div>
+          <label class="block text-sm font-medium text-gray-600 mb-1" for="twilioSid">Twilio SID</label>
+          <input type="text" id="twilioSid" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500" placeholder="ACXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-600 mb-1" for="twilioAuthToken">Auth Token</label>
+          <input type="text" id="twilioAuthToken" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500" placeholder="Your Auth Token" />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-600 mb-1" for="twilioPhone">Twilio Phone Number</label>
+          <input type="text" id="twilioPhone" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-indigo-500" placeholder="+1234567890" />
+        </div>
+      </div>
+
+      <div class="text-center pt-4">
+        <button id="saveTwilioSettings" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-2 rounded-md font-medium transition">
+          Save & Connect
+        </button>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
