--- a/public/admin/reviews.html
+++ b/public/admin/reviews.html
@@ -119,20 +119,46 @@
   </div>
 
   <!-- Internal Review Modal -->
-  <div id="internalReviewModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
-    <div class="bg-white rounded-xl shadow-2xl p-6 w-[90%] max-w-2xl relative space-y-6">
-      <button id="closeInternalReviewModal" class="absolute top-3 right-4 text-gray-400 hover:text-red-500 text-2xl font-bold">&times;</button>
-      <h2 class="text-xl font-semibold text-gray-800">Internal Reviews Analytics</h2>
+<div id="internalReviewModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
+  <div class="bg-white rounded-xl shadow-2xl p-6 w-[95%] max-w-6xl max-h-[90vh] overflow-y-auto relative space-y-6">
+    <button id="closeInternalReviewModal" class="absolute top-3 right-4 text-gray-400 hover:text-red-500 text-2xl font-bold">&times;</button>
+    <h2 class="text-2xl font-bold text-gray-800">📊 Internal Review Analytics</h2>
 
-      <canvas id="internalChart" class="w-full h-64"></canvas>
+    <!-- Chart -->
+    <div>
+      <canvas id="internalChart" class="w-full h-72"></canvas>
+    </div>
 
-      <div class="text-right pt-4">
-        <button id="sendInternalReview" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md">
-          📨 Send Internal Review Form
-        </button>
+    <!-- Table of Reviews -->
+    <div class="mt-6">
+      <h3 class="text-lg font-semibold text-gray-700 mb-3">Recent Internal Reviews</h3>
+      <div class="overflow-auto rounded-lg shadow border border-gray-200">
+        <table class="min-w-full bg-white">
+          <thead class="bg-gray-50 text-left text-sm font-semibold text-gray-600">
+            <tr>
+              <th class="px-4 py-3">Client</th>
+              <th class="px-4 py-3">Service Provider</th>
+              <th class="px-4 py-3">Rating</th>
+              <th class="px-4 py-3">Review</th>
+              <th class="px-4 py-3">Date</th>
+            </tr>
+          </thead>
+          <tbody id="internalReviewTableBody" class="text-sm text-gray-700">
+            <!-- Rows will be injected dynamically via JS -->
+          </tbody>
+        </table>
       </div>
     </div>
+
+    <!-- Send Button -->
+    <div class="text-right pt-6">
+      <button id="sendInternalReview" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-md">
+        📨 Send Internal Review Request
+      </button>
+    </div>
   </div>
+</div>
+
 
   <!-- SMS Setup Modal -->
   <div id="smsModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
